[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"secweb" = ["py.typed"]

[project]
name = "Secweb-dev"
version = "1.30.12"
authors = [ { name="Motagamwala Taha Arif Ali", email = "tahaar5321@gmail.com" }, ]
description = "Secweb is a pack of security middlewares for fastApi and starlette server it includes CSP, HSTS, and many more"
readme = "README.md"
keywords=['fastapi security header', 'security header', 'starlette security header', 'secweb', 'fastapi csp', 'starlette csp', 'csp']
requires-python = ">=3.9"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/tmotagam/Secweb"
Documentation = "https://github.com/tmotagam/Secweb#readme"
Repository = "https://github.com/tmotagam/Secweb.git"
Issues = "https://github.com/tmotagam/Secweb/issues"