[metadata]
name = Secweb-dev
version = 1.5.2
author = Motagamwala Taha Arif Ali
author_email = tahaar5321@gmail.com
description = Secweb is a pack of security middlewares for fastApi and starlette server it includes CSP, HSTS, and many more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmotagam/Secweb
project_urls =
    Bug Tracker = https://github.com/tmotagam/Secweb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src